SM-Dev/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>CompanyCode</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerDiscountConditionGroup__c</fullName>
        <description>This field holds the Discount conditions and their values, from the SAP system.</description>
        <label>Customer Discount Condition Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>Z3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerFreightConditionGroup__c</fullName>
        <description>This holds the customer freight condition values from SAP.</description>
        <label>Customer Freight Condition Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
                <value>
                    <fullName>Z3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPo__c</fullName>
        <description>This accommodates the Customer P.O on the order. Needed for communication with SAP.</description>
        <label>Customer P.O</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerShipAccount__c</fullName>
        <label>CustomerShipAccount</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepositTerms__c</fullName>
        <label>DepositTerms</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <description>This accommodates the Distribution Channel on the order. Needed for accommodation with SAP.</description>
        <label>Distribution Channel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>This Accommodates the Division on the order. Needed for communication with SAP.</description>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocType__c</fullName>
        <description>This accommodates the Doc Type on the order. Needed for communication with SAP.</description>
        <label>Doc Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Commerce_Cloud_CreatedBy__c</fullName>
        <label>Commerce Cloud Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_Abandoned_Cart_Id__c</fullName>
        <label>Commerce Cloud Basket Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Billing_Phone__c</fullName>
        <label>Commerce Cloud Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Order_No__c</fullName>
        <label>Commerce Cloud Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Replaced_Order_No__c</fullName>
        <label>Commerce Cloud Replaced Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Replacement_Order_No__c</fullName>
        <label>Commerce Cloud Replaced By Order No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Shipping_Method__c</fullName>
        <label>Commerce Cloud Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Shipping_Phone__c</fullName>
        <label>Commerce Cloud Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Site__c</fullName>
        <label>Commerce Cloud Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Total_price__c</fullName>
        <inlineHelpText>The total amount of the order, including product discounts.</inlineHelpText>
        <label>Total Order Amount</label>
        <summarizedField>OrderItem.OSF_DWback__Demandware_Total_price__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__In_Store_Order__c</fullName>
        <label>In Store Order</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Include_Record_Type_in_KPI__c</fullName>
        <label>Include Record Type in KPI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Order_Registration_Status__c</fullName>
        <label>Order Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Unregistered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSF_DWback__Synced_by_UnifyCommerce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced by UnifyCommerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>PaymentTerms</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RejectReason__c</fullName>
        <description>This field holds the reject reason codes as per the SAP system.</description>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>73</fullName>
                </value>
                <value>
                    <fullName>74</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>76</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
                <value>
                    <fullName>J1</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>NR</fullName>
                </value>
                <value>
                    <fullName>Z1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedShipDate__c</fullName>
        <label>RequestedShipDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAPCustomerNumber__c</fullName>
        <label>SAPCustomerNumber</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <label>SAP Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesGroup__c</fullName>
        <description>This accommodates the sales group on the order. Needed for communication with SAP.</description>
        <label>Sales Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <description>This accommodates the sales office on the order. Needed for communication with SAP.</description>
        <label>Sales Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrg__c</fullName>
        <description>This accommodates the Sales Org on the order. Needed for communication with SAP.</description>
        <label>Sales Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToCustomerNo__c</fullName>
        <description>This field accommodates the ship to customer number on the order. Needed for communication with SAP.</description>
        <label>Ship To Customer No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCondition__c</fullName>
        <label>Shipping Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingInstructions__c</fullName>
        <description>This captures the shipping instructions of the order and this needs to be communicated with the SAP system.</description>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldToCustomerNo__c</fullName>
        <description>This field accommodates the sold to customer number on the order. Needed to communicate with SAP.</description>
        <label>Sold To Customer No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>B2C_Order</fullName>
        <active>true</active>
        <label>B2C Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>